--- a/my-maven-class-project/pom.xml
+++ b/my-maven-class-project/pom.xml
@@ -10,7 +10,7 @@
     <packaging>jar</packaging>
 
     <name>My Maven Class Project</name>
-    <description>A simple Maven project with JUnit 5 tests</description>
+    <description>A simple Maven project with JUnit 5 tests and reporting</description>
 
     <properties>
         <!-- Java Version -->
@@ -48,7 +48,7 @@
 
     <build>
         <plugins>
-            <!-- Compiler Plugin to ensure Java version -->
+            <!-- Compiler Plugin to ensure Java version compatibility -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -59,7 +59,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Surefire Plugin to run JUnit 5 tests -->
+            <!-- Surefire Plugin for running JUnit 5 tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -71,6 +71,21 @@
                         <version>1.3.2</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+
+            <!-- Surefire Report Plugin to generate test reports in HTML format -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>3.0.0-M7</version>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
