--- a/my-maven-class-project/pom.xml
+++ b/my-maven-class-project/pom.xml
@@ -12,9 +12,11 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <jacoco.version>0.8.8</jacoco.version>
+        <sonar.projectKey>my-maven-class-project</sonar.projectKey>
     </properties>
 
     <dependencies>
+        <!-- JUnit 5 for Testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -31,6 +33,7 @@
 
     <build>
         <plugins>
+            <!-- Compiler Plugin for Java 17 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -41,12 +44,14 @@
                 </configuration>
             </plugin>
 
+            <!-- Surefire Plugin for Running JUnit 5 Tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
             </plugin>
 
+            <!-- JaCoCo Plugin for Code Coverage -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -64,10 +69,16 @@
                         <goals>
                             <goal>report</goal>
                         </goals>
+                        <configuration>
+                            <reports>
+                                <report>xml</report> <!-- Ensure XML report is generated -->
+                            </reports>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
 
+            <!-- SonarQube Plugin for Static Code Analysis -->
             <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
