--- a/my-maven-class-project/pom.xml
+++ b/my-maven-class-project/pom.xml
@@ -45,11 +45,16 @@
                 </configuration>
             </plugin>
 
-            <!-- Surefire Plugin for Running JUnit 5 Tests -->
+            <!-- Surefire Plugin to Run JUnit 5 Tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
+                <configuration>
+                    <useFile>true</useFile>
+                    <printSummary>true</printSummary>
+                    <reportFormat>xml</reportFormat> <!-- Ensures XML reports for Jenkins -->
+                </configuration>
             </plugin>
 
             <!-- JaCoCo Plugin for Code Coverage -->
@@ -72,7 +77,7 @@
                         </goals>
                         <configuration>
                             <reports>
-                                <report>xml</report> <!-- Generates XML coverage report for SonarQube -->
+                                <report>xml</report> <!-- Ensures XML report for SonarQube -->
                             </reports>
                         </configuration>
                     </execution>
