--- a/my-maven-class-project/pom.xml
+++ b/my-maven-class-project/pom.xml
@@ -45,19 +45,11 @@
                 </configuration>
             </plugin>
 
-            <!-- Maven JAR Plugin to Generate a Deployable JAR -->
+            <!-- Maven JAR Plugin (Ensures Only One JAR is Created) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.2.0</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
 
             <!-- Surefire Plugin for Running JUnit 5 Tests -->
@@ -65,26 +57,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
-                <configuration>
-                    <useFile>true</useFile>
-                    <printSummary>true</printSummary>
-                    <reportFormat>xml</reportFormat>
-                </configuration>
-            </plugin>
-
-            <!-- Surefire Report Plugin for HTML Reports -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>3.0.0-M7</version>
-                <executions>
-                    <execution>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>report-only</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
 
             <!-- JaCoCo Plugin for Code Coverage -->
