--- a/my-maven-class-project/pom.xml
+++ b/my-maven-class-project/pom.xml
@@ -56,10 +56,22 @@
                 <version>3.0.0-M5</version>
                 <configuration>
                     <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-                    <includes>
-                        <include>**/*.java</include>
-                    </includes>
                 </configuration>
+            </plugin>
+
+            <!-- Surefire Report Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report-only</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <!-- JaCoCo Plugin for Code Coverage -->
