--- a/my-maven-class-project/pom.xml
+++ b/my-maven-class-project/pom.xml
@@ -14,6 +14,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <jacoco.version>0.8.8</jacoco.version>
         <sonar.projectKey>my-maven-class-project</sonar.projectKey>
+        <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     </properties>
 
     <dependencies>
