--- a/my-maven-class-project/pom.xml
+++ b/my-maven-class-project/pom.xml
@@ -13,8 +13,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <jacoco.version>0.8.8</jacoco.version>
-        <sonar.projectKey>my-maven-class-project</sonar.projectKey>
-        <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+        <sonar.projectKey>${project.groupId}:${project.artifactId}</sonar.projectKey>
     </properties>
 
     <dependencies>
@@ -58,54 +57,9 @@
                 </configuration>
             </plugin>
 
-            <!-- Surefire Report Plugin for Generating HTML Reports -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>3.0.0-M7</version>
-                <executions>
-                    <execution>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>report-only</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
             <!-- JaCoCo Plugin for Code Coverage -->
             <plugin>
                 <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco.version}</version>
-                <executions>
-                    <execution>
-                        <id>prepare-agent</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>report</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                        <configuration>
-                            <reports>
-                                <report>xml</report> <!-- Ensures XML report for SonarQube -->
-                            </reports>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
 
-            <!-- SonarQube Plugin for Static Code Analysis -->
-            <plugin>
-                <groupId>org.sonarsource.scanner.maven</groupId>
-                <artifactId>sonar-maven-plugin</artifactId>
-                <version>3.9.1.2184</version>
-            </plugin>
-        </plugins>
-    </build>
-</project>
+::contentReference[oaicite:0]{index=0}
+ 
