--- a/my-maven-class-project/pom.xml
+++ b/my-maven-class-project/pom.xml
@@ -88,6 +88,7 @@
                             <goal>report</goal>
                         </goals>
                         <configuration>
+                            <outputDirectory>${project.build.directory}/jacoco-report</outputDirectory>
                             <reports>
                                 <report>xml</report>
                             </reports>
