--- a/my-maven-class-project/pom.xml
+++ b/my-maven-class-project/pom.xml
@@ -60,6 +60,9 @@
                         <goals>
                             <goal>report-only</goal>
                         </goals>
+                        <configuration>
+                            <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
