--- a/my-maven-class-project/pom.xml
+++ b/my-maven-class-project/pom.xml
@@ -15,6 +15,8 @@
         <maven.compiler.target>17</maven.compiler.target>
         <jacoco.version>0.8.8</jacoco.version>
         <sonar.projectKey>${project.groupId}:${project.artifactId}</sonar.projectKey>
+             <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+             <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <dependencies>
