--- a/my-maven-class-project/pom.xml
+++ b/my-maven-class-project/pom.xml
@@ -88,9 +88,7 @@
                         </goals>
                         <configuration>
                             <outputDirectory>${project.build.directory}/jacoco-report</outputDirectory>
-                            <reports>
-                                <report>xml</report>
-                            </reports>
+                            <dataFile>${project.build.directory}/jacoco.exec</dataFile>
                         </configuration>
                     </execution>
                 </executions>
