--- a/my-maven-class-project/pom.xml
+++ b/my-maven-class-project/pom.xml
@@ -33,6 +33,13 @@
                 <version>2.22.2</version>
             </plugin>
 
+            <!-- Maven Surefire Report Plugin for generating HTML reports -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.22.2</version>
+            </plugin>
+
             <!-- JaCoCo Maven Plugin for Code Coverage -->
             <plugin>
                 <groupId>org.jacoco</groupId>
